--- a/BookShelf/views/Home.ejs
+++ b/BookShelf/views/Home.ejs
@@ -7,26 +7,13 @@
   <body>
     <div class="container-fluid m-0 p-0">
       <%- include('./partials/nav') %>
-      <div class="grid p-5">
-        <div class="row row-gap-4">
-          <%if(response){%> <% response.data.forEach(book => { %>
-          <div class="col-10 col-sm-6 col-md-4 col-lg-3 col-xl-2 m-auto">
-            <div class="card">
-              <!-- <img src="..." class="card-img-top" alt="..." /> -->
-              <div class="card-body">
-                <h5 class="card-title"><%= book.volumeInfo.title%></h5>
-                <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
-                </p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-              </div>
-            </div>
-          </div>
-          <% }); %> <% } %>
-        </div>
+      
+
+      <div class="px-4 py-4">
+        <div class="row row-gap-4 grid mb-3" id="books-container"></div>
+        <%- include('./partials/pagination') %>
       </div>
     </div>
+    <%- include('./partials/script') %>
   </body>
-  <%- include('./partials/script') %>
 </html>
