--- a/BookShelf/views/partials/nav.ejs
+++ b/BookShelf/views/partials/nav.ejs
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
+<nav class="navbar navbar-expand-lg bg-body-tertiary py-2 px-3 px-lg-4">
+  <div class="container-fluid p-0">
     <a class="navbar-brand lato-black" href="">BookShelf</a>
     <button
       class="navbar-toggler"
@@ -13,15 +13,56 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <form class="d-flex" role="search">
+      <form class="d-flex">
         <input
-          class="form-control me-2"
+          class="form-control"
           type="search"
           placeholder="Search"
           aria-label="Search"
+          id="searchBar"
         />
-        <button class="btn btn-outline-success" type="submit">Search</button>
+        <!-- <button class="btn btn-outline-success" type="button" id="searchButton">Search</button> -->
       </form>
+      <div class="container-fluid d-flex p-0 justify-content-end options">
+        <div class="menu-bar gap-2">
+          <div class="dropdown">
+            <button
+              class="btn px-4"
+              type="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >
+              Sort <i class="fa-solid fa-filter"></i>
+            </button>
+            <ul class="dropdown-menu">
+              <li id="asc">
+                <a class="dropdown-item"
+                  >A - Z <i class="fa-solid fa-arrow-down-a-z"></i
+                ></a>
+              </li>
+              <li id="desc">
+                <a class="dropdown-item"
+                  >Z - A <i class="fa-solid fa-arrow-down-z-a"></i
+                ></a>
+              </li>
+              <li id="latest">
+                <a class="dropdown-item">LATEST</a>
+              </li>
+              <li id="oldest">
+                <a class="dropdown-item">OLDEST</a>
+              </li>
+            </ul>
+          </div>
+          <div
+            class="rounded-1 d-flex justify-content-center align-items-center p-1 switch"
+          >
+            <div class="border border-1 px-2 py-1 grid-button active" id="grid">
+              Grid
+            </div>
+            <div class="border border-1 px-2 py-1 list-button" id="list">List</div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </nav>
